flux/infrastructure/base/gateway-api/config/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-system
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    gateway.networking.k8s.io/listener-access-internal: "true"
    gateway.networking.k8s.io/listener-access-external: "true"
