flux/infrastructure/base/gateway-api/config/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https
spec:
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
  parentRefs:
    - name: internal
      sectionName: http
    - name: external
      sectionName: http
